completed linkedlist documentation

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -8,8 +8,8 @@
         {
             "type": "node",
             "request": "launch",
-            "name": "Launch Program",
-            "program": "${workspaceFolder}\\linkedlist.js"
+            "name": "Debug LinkedList",
+            "program": "${workspaceFolder}\\exercise\\linkedlist.js"
         }
     ]
 }
